# dforge

./: .gitignore  Cargo.toml  install.sh
.github/workflows/: release.yml
crates/dforge-chain/: Cargo.toml
crates/dforge-chain/src/: lib.rs
crates/dforge-cli/: Cargo.toml
crates/dforge-cli/src/: main.rs
crates/dforge-cli/src/commands/: branch.rs  commit.rs  config.rs  diff.rs  explore.rs  identity.rs  init.rs  issue.rs  log.rs  merge.rs  mod.rs  pr.rs  pull.rs  push.rs  search.rs  status.rs
crates/dforge-core/: Cargo.toml
crates/dforge-core/src/: chunk.rs  commit.rs  diff.rs  lib.rs  merge.rs  object.rs  pack.rs  refs.rs  repo.rs
crates/dforge-crypto/: Cargo.toml
crates/dforge-crypto/src/: aes.rs  hash.rs  identity.rs  lib.rs  sss.rs
crates/dforge-ipfs/: Cargo.toml
crates/dforge-ipfs/src/: lib.rs
crates/dforge-p2p/: Cargo.toml
crates/dforge-p2p/src/: lib.rs
crates/dforge-search/: Cargo.toml
crates/dforge-search/src/: lib.rs
crates/dforge-tui/: Cargo.toml
crates/dforge-tui/src/: lib.rs
packaging/debian/: dforge_0.1.0-1_amd64.deb
packaging/debian/dforge_0.1.0-1_amd64/DEBIAN/: control  postinst
packaging/debian/dforge_0.1.0-1_amd64/usr/share/doc/dforge/: copyright
snap/: snapcraft.yaml
