[workspace]
members = [
    "crates/dforge-crypto",
    "crates/dforge-core",
    "crates/dforge-ipfs",
    "crates/dforge-chain",
    "crates/dforge-search",
    "crates/dforge-tui",
    "crates/dforge-cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto
blake3 = "1"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Async HTTP
reqwest = { version = "0.12", features = ["json", "multipart"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
