[package]
name = "dforge-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
aes-gcm = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
