[package]
name = "dforge-ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
dforge-crypto = { path = "../dforge-crypto" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
